.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-pr-env
  labels:
    app: argocd-pr-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-pr-env
  template:
    metadata:
      labels:
        app: argocd-pr-env
    spec:
      containers:
        - name: argocd-pr-env
          image: rmiguel/argocd-pr-env:38-e40ed05eb06bff3effddb034d92f6d11bffb72c4
          ports:
            - containerPort: 8080
