.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-pr-env
spec:
  selector:
    app: argocd-pr-env
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
